fix: change homescreen container height to get rid of scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -243,7 +243,7 @@ body[clean-bg="true"] {
 }
 
 .home-screen {
-    height: calc(100vh - 385px);
+    height: calc(100vh - 401px);
     box-sizing: content-box;
 }
 
